--- a/Encrypter/templates/dashboard.html
+++ b/Encrypter/templates/dashboard.html
@@ -13,7 +13,7 @@
         <input type="submit" value="Account Settings" /><br /><br />
     </form>
     <form action="/imageuploadpage">
-
+        <input type="submit" value="Upload New Image" /><br /><br />
     </form>
     <form action="/logout">
         <input type="submit" value="Log Out" /><br /><br />
