--- a/Encrypter/templates/imageupload.html
+++ b/Encrypter/templates/imageupload.html
@@ -13,12 +13,16 @@
     <form action="/imageupload" method="post" enctype="multipart/form-data">
         <label id="image_upload">Upload an Image</label><br /><br />
         <input type="file" name="uploaded_image" /><br /><br />
-        
-        <label id="default_pin">Use Default 4-Digit Pin?</label><br />
-        <input type="checkbox" id="myCheck" name="check" value="default" onclick="addbox();" /><br /><br />
-        
+
+        <input type="checkbox" id="myCheck" name="check" value="default" onclick="addbox();" />
+        <label id="default_pin">Use Default 4-Digit Pin?</label><br /><br />
+
+        <label id="textlabel">Enter 4-Digit Encryption Key</label>
         <input type="text" id="text_box" name="encryption_key" /><br /><br />
-        
+
+        <label id="img_name">Enter Image Name</label><br />
+        <input type="text" id="img_text" name="image_text" /><br /><br />
+
         <input type="submit" value="Upload" />
 
     </form>
@@ -26,9 +30,11 @@
         function addbox() {
             if (document.getElementById('myCheck').checked) {
                 document.getElementById('text_box').style.display = 'none';
+                document.getElementById('textlabel').style.display = 'none';
             }
             else {
                 document.getElementById('text_box').style.display = 'block';
+                document.getElementById('textlabel').style.display = 'block';
             }
         }
     </script>
