--- a/Encrypter/templates/imageupload.html
+++ b/Encrypter/templates/imageupload.html
@@ -21,7 +21,7 @@
         <input type="text" id="text_box" name="encryption_key" /><br /><br />
 
         <label id="img_name">Enter Image Name</label><br />
-        <input type="text" id="img_text" name="image_text" /><br /><br />
+        <input type="text" id="img_text" name="image_name" /><br /><br />
 
         <input type="submit" value="Upload" />
 
