--- a/Encrypter/templates/dashboard.html
+++ b/Encrypter/templates/dashboard.html
@@ -26,6 +26,7 @@
     </h1><br /><br />
     <table>
         <tr>
+            <th>Image ID</th>
             <th>Image Name</th>
             <th>Upload Date</th>
             <th>Controls</th>
@@ -35,9 +36,10 @@
         <tr>
             <td>{{ r[0] }}</td>
             <td>{{ r[1] }}</td>
+            <td>{{ r[2] }}</td>
             <td>
-                <a href="/downloadimage/{{r[1]}}" class="btn btn-primary">Download</a>
-                <a href="/deleteimage/{{r[1]}}" class="btn btn-danger">Delete</a>
+                <a href="/downloadimage/{{r[0]}}" class="btn btn-primary">Download</a>
+                <a href="/deleteimage/{{r[0]}}" class="btn btn-danger">Delete</a>
             </td>
         </tr>
         {% endfor %}
