--- a/Encrypter/templates/imageupload.html
+++ b/Encrypter/templates/imageupload.html
@@ -14,11 +14,11 @@
         <label id="image_upload">Upload an Image</label><br /><br />
         <input type="file" name="uploaded_image" /><br /><br />
 
-        <input type="checkbox" id="myCheck" name="check" value="default" onclick="addbox();" />
+        <input type="checkbox" id="myCheck" name="check" value="default" checked onclick="addbox();" />
         <label id="default_pin">Use Default 4-Digit Pin?</label><br /><br />
 
-        <label id="textlabel">Enter 4-Digit Encryption Key</label>
-        <input type="text" id="text_box" name="encryption_key" /><br /><br />
+        <label id="textlabel" hidden>Enter 4-Digit Encryption Key</label>
+        <input type="text" id="text_box" name="encryption_key" hidden/><br /><br />
 
         <label id="img_name">Enter Image Name</label><br />
         <input type="text" id="img_text" name="image_name" /><br /><br />
