--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -11,10 +11,10 @@
 <body>
     <h3>SIGN UP</h3>
     <form action="/signup" method="post">
-        <label id="fname">Enter First Name</label><br />
+        <label id="fname">First Name</label><br />
         <input type="text" id="firstname" placeholder="First Name" name="first_name" required /><br />
 
-        <label id="lname">Enter Last Name</label><br />
+        <label id="lname">Last Name</label><br />
         <input type="text" id="lastname" placeholder="Last Name" name="last_name" required /><br />
 
         <label id="emailid">Enter Email</label><br />
