--- a/Encrypter/templates/imagepasswordpage.html
+++ b/Encrypter/templates/imagepasswordpage.html
@@ -8,7 +8,7 @@
 <body>
     <form action="/downloadimage" method="post">
         <label id="imageidtext">Enter Your 4-Digit Pin for Image</label><br />
-        <input type="text" name="image_id" value="{{image_id}}" disabled/><br /><br />
+        <input type="text" name="image_id" value="{{image_id}}" readonly/><br /><br />
     
         <input type="number" name="image_pass" maxlength="4" /><br /><br />
         
