--- a/Encrypter/templates/changepassword.html
+++ b/Encrypter/templates/changepassword.html
@@ -6,9 +6,9 @@
     <title>Change Password</title>
 </head>
 <body>
-    <form action="/changepassword">
+    <form action="/changepassword" method="post">
         <label id="oldpass">Enter Existing Password</label><br />
-        <input type="password" id="oldpassword" name="oldpassword" placeholder="Existing Passoword" /><br /><br />
+        <input type="password" id="oldpassword" name="oldpassword" placeholder="Existing Password" /><br /><br />
 
         <label id="newpass1">Enter New Password</label><br />
         <input type="password" id="newpass1" name="newpassword1" placeholder="New Password" /><br /><br />
