--- a/Encrypter/templates/dashboard.html
+++ b/Encrypter/templates/dashboard.html
@@ -42,7 +42,7 @@
         <tr>
             <td hidden>{{ r[0] }}</td>
             <td>{{ r[1] }}</td>
-            <td>{{ r[2] }}</td>
+            <td>{{ r[2] }}&nbsp;&nbsp;</td>
             <td>
                 <a href="/downloadimagepage/{{r[0]}}" class="btn btn-success" onclick="getimgpass();">Download</a>&nbsp;&nbsp;
                 <a href="/viewimagepage/{{r[0]}}" class="btn btn-primary" ">View</a>&nbsp;&nbsp;
