--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h3>SIGN UP</h3>
+    <div>
     <form action="/signup" method="post">
         <label id="fname">First Name</label><br />
         <input type="text" id="firstname" placeholder="First Name" name="first_name" required /><br />
@@ -30,5 +31,6 @@
 
         <a href="/loginpage">Login Instead</a>
     </form>
+    </div>
 </body>
 </html>
