--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -12,19 +12,19 @@
     <h3>SIGN UP</h3>
     <div>
     <form action="/signup" method="post">
-        <label id="fname">First Name</label><br />
+        <label for="firstname" id="fname">First Name</label><br />
         <input type="text" id="firstname" placeholder="First Name" name="first_name" required /><br />
 
-        <label id="lname">Last Name</label><br />
+        <label for="lastname" id="lname">Last Name</label><br />
         <input type="text" id="lastname" placeholder="Last Name" name="last_name" required /><br />
 
-        <label id="emailid">Enter Email</label><br />
+        <label for="email" id="emailid">Enter Email</label><br />
         <input type="text" id="email" placeholder="Email" name="email_id" required /><br />
 
-        <label id="pass">Enter Password</label><br />
+        <label for="password" id="pass">Enter Password</label><br />
         <input type="password" id="password" placeholder="Password" name="password" required /><br />
 
-        <label id="imgpass">Enter 4 Digit Image Password</label><br />
+        <label for="imgpassword" id="imgpass">Enter 4 Digit Image Password</label><br />
         <input type="number" id="imgpassword" placeholder="Img Password" name="img_pass" maxlength="4" required /><br /><br />
 
         <input type="submit" value="SUBMIT" /> <br /><br />
