--- a/Encrypter/templates/imagepasswordpage.html
+++ b/Encrypter/templates/imagepasswordpage.html
@@ -4,14 +4,27 @@
 <head>
     <meta charset="utf-8" />
     <title>Image Password</title>
+    <script src="/static/javascript/templatejavascript.js"></script>
 </head>
 <body>
+    {% block content %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+
+        {% block page_content %}{% endblock %}
+    </div>
+    {% endblock %}
     <form action="/downloadimage" method="post">
         <label id="imageidtext">Enter Your 4-Digit Pin for Image</label><br />
-        <input type="text" name="image_id" value="{{image_id}}" readonly/><br /><br />
-    
+        <input type="text" name="image_id" value="{{image_id}}" readonly /><br /><br />
+
         <input type="number" name="image_pass" maxlength="4" /><br /><br />
-        
+
         <input type="submit" value="Download" />
     </form>
 </body>
