--- a/Encrypter/templates/accountsettings.html
+++ b/Encrypter/templates/accountsettings.html
@@ -4,8 +4,22 @@
 <head>
     <meta charset="utf-8" />
     <title>Account Settings</title>
+    <script src="/static/javascript/templatejavascript.js"></script>
 </head>
 <body>
+
+    {% block content %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+
+        {% block page_content %}{% endblock %}
+    </div>
+    {% endblock %}
     <form action="/changepasswordpage">
         <br /><br />
         <input type="submit" value="Change Account Password" /><br /><br />
