--- a/Encrypter/templates/changepassword.html
+++ b/Encrypter/templates/changepassword.html
@@ -4,8 +4,22 @@
 <head>
     <meta charset="utf-8" />
     <title>Change Password</title>
+    <script src="/static/javascript/templatejavascript.js"></script>
 </head>
 <body>
+
+    {% block content %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+
+        {% block page_content %}{% endblock %}
+    </div>
+    {% endblock %}
     <form action="/changepassword" method="post">
         <label id="oldpass">Enter Existing Password</label><br />
         <input type="password" id="oldpassword" name="oldpassword" placeholder="Existing Password" /><br /><br />
