--- a/Encrypter/templates/login.html
+++ b/Encrypter/templates/login.html
@@ -7,18 +7,43 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="/static/javascript/templatejavascript.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            window.setTimeout(function () {
+                $(".alert").fadeTo(1000, 0).slideUp(1000, function () {
+                    $(this).remove();
+                });
+            }, 5000);
+        });
+    </script>
 </head>
 <body>
     <h1>Login</h1><br />
 
+    {% block content %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+
+        {% block page_content %}{% endblock %}
+    </div>
+    {% endblock %}
+
     <form action="/login" method="post">
         <label id="emailid">Enter Email</label><br />
-        <input type="text" id="email" name="email_id" placeholder="Enter Email"/><br />
+        <input type="text" id="email" name="email_id" placeholder="Enter Email" /><br />
 
         <label id="pass">Enter Password</label><br />
-        <input type="password" id="password" name="password" placeholder="Enter Password"/><br /><br />
-        
-        <input type="submit" value="SUBMIT" />
+        <input type="password" id="password" name="password" placeholder="Enter Password" /><br /><br />
+
+        <input type="submit" value="SUBMIT" /><br /><br />
+
+        <a href="/signuppage">Do not have an account?, Sign Up here</a>
     </form>
 </body>
 </html>
