--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -7,30 +7,46 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="/static/javascript/templatejavascript.js"></script>
+    <link rel="stylesheet" href="static/css/signuppage.css" />
 </head>
 <body>
-    <h3>SIGN UP</h3>
-    <div>
-    <form action="/signup" method="post">
-        <label for="firstname" id="fname">First Name</label><br />
-        <input type="text" id="firstname" placeholder="First Name" name="first_name" required /><br />
+    <h3 id="signup">SIGN UP</h3>
 
-        <label for="lastname" id="lname">Last Name</label><br />
-        <input type="text" id="lastname" placeholder="Last Name" name="last_name" required /><br />
+    {% block content %}
+    <div class="container">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
 
-        <label for="email" id="emailid">Enter Email</label><br />
-        <input type="text" id="email" placeholder="Email" name="email_id" required /><br />
+        {% block page_content %}{% endblock %}
+    </div>
+    {% endblock %}
 
-        <label for="password" id="pass">Enter Password</label><br />
-        <input type="password" id="password" placeholder="Password" name="password" required /><br />
+    <div id="form1">
+        <form action="/signup" method="post" text-align="center">
+            <label for="firstname" id="fname">First Name</label><br />
+            <input type="text" id="firstname" placeholder="First Name" name="first_name" required /><br />
 
-        <label for="imgpassword" id="imgpass">Enter 4 Digit Image Password</label><br />
-        <input type="number" id="imgpassword" placeholder="Img Password" name="img_pass" maxlength="4" required /><br /><br />
+            <label for="lastname" id="lname">Last Name</label><br />
+            <input type="text" id="lastname" placeholder="Last Name" name="last_name" required /><br />
 
-        <input type="submit" value="SUBMIT" /> <br /><br />
+            <label for="email" id="emailid">Enter Email</label><br />
+            <input type="text" id="email" placeholder="Email" name="email_id" required /><br />
 
-        <a href="/loginpage">Login Instead</a>
-    </form>
+            <label for="password" id="pass">Enter Password</label><br />
+            <input type="password" id="password" placeholder="Password" name="password" required /><br />
+
+            <label for="imgpassword" id="imgpass">Enter 4 Digit Image Password</label><br />
+            <input type="number" id="imgpassword" placeholder="Img Password" name="img_pass" maxlength="4" required /><br /><br />
+
+            <input id="submitbutton" class="text-center" type="submit" value="SUBMIT" /> <br /><br />
+
+            <a href="/loginpage">Login Instead</a>
+        </form>
     </div>
 </body>
 </html>
