--- a/Encrypter/templates/accountsettings.html
+++ b/Encrypter/templates/accountsettings.html
@@ -5,6 +5,15 @@
     <meta charset="utf-8" />
     <title>Account Settings</title>
     <script src="/static/javascript/templatejavascript.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            window.setTimeout(function () {
+                $(".alert").fadeTo(1000, 0).slideUp(1000, function () {
+                    $(this).remove();
+                });
+            }, 5000);
+        });
+    </script>
 </head>
 <body>
 
