--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -37,24 +37,40 @@
 
     <div id="form1">
         <form action="/signup" method="post" text-align="center">
-            <label for="firstname" id="fname">First Name</label><br />
-            <input type="text" id="firstname" placeholder="First Name" name="first_name" required /><br />
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="firstname" id="fname">First Name</label><br />
+                    <input type="text" id="firstname" class="form-control" placeholder="First Name" name="first_name" required />
+                </div>
 
-            <label for="lastname" id="lname">Last Name</label><br />
-            <input type="text" id="lastname" placeholder="Last Name" name="last_name" required /><br />
+                <div class="form-group col-md-4">
+                    <label for="lastname" id="lname">Last Name</label><br />
+                    <input type="text" id="lastname" class="form-control" placeholder="Last Name" name="last_name" required />
+                </div>
+            </div>
 
-            <label for="email" id="emailid">Enter Email</label><br />
-            <input type="text" id="email" placeholder="Email" name="email_id" required /><br />
+            <div class="form-group col-md-8">
+                <label for="email" id="emailid">Enter Email</label><br />
+                <input type="text" id="email" class="form-control" placeholder="Email" name="email_id" required />
+            </div>
 
-            <label for="password" id="pass">Enter Password</label><br />
-            <input type="password" id="password" placeholder="Password" name="password" required /><br />
+            <div class="form-group col-md-8">
+                <label for="password" id="pass">Enter Password</label><br />
+                <input type="password" id="password" class="form-control" placeholder="Password" name="password" required />
+            </div>
 
-            <label for="imgpassword" id="imgpass">Enter 4 Digit Image Password</label><br />
-            <input type="number" id="imgpassword" placeholder="Img Password" name="img_pass" maxlength="4" required /><br /><br />
+            <div class="form-group col-md-8">
+                <label for="imgpassword" id="imgpass">Enter 4 Digit Image Password</label><br />
+                <input type="text" id="imgpassword" class="form-control" name="img_pass" maxlength="4" required /><br />
+            </div>
 
-            <input id="submitbutton" class="text-center" type="submit" value="SUBMIT" /> <br /><br />
+            <div class="form-group col-md-8" style="text-align:center">
+                <input id="submitbutton" class="text-center btn btn-primary" type="submit" value="SUBMIT" /> <br /><br />
+            </div>
 
-            <a href="/loginpage">Login Instead</a>
+            <div class="form-group col-md-8" style="text-align:center;">
+                <a href="/loginpage">Login Instead</a>
+            </div>
         </form>
     </div>
 </body>
