--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -39,12 +39,12 @@
         <form action="/signup" method="post" text-align="center">
             <div class="form-row">
                 <div class="form-group col-md-4">
-                    <label for="firstname" id="fname">First Name</label><br />
+                    <label for="firstname" id="fname">Enter First Name</label><br />
                     <input type="text" id="firstname" class="form-control" placeholder="First Name" name="first_name" required />
                 </div>
 
                 <div class="form-group col-md-4">
-                    <label for="lastname" id="lname">Last Name</label><br />
+                    <label for="lastname" id="lname">Enter Last Name</label><br />
                     <input type="text" id="lastname" class="form-control" placeholder="Last Name" name="last_name" required />
                 </div>
             </div>
