--- a/Encrypter/templates/viewimage.html
+++ b/Encrypter/templates/viewimage.html
@@ -8,7 +8,7 @@
 <body>
     <h3>Here's your image</h3><br /><br />
     <div>
-        <img src="data:image/png;base64, {{image_string}}" alt="User Image" />
+        <img style="position:center; margin-top:20%;" src="data:image/png;base64, {{image_string}}" alt="User Image" />
     </div>
 </body>
 </html>
