--- a/Encrypter/templates/viewimagepasswordpage.html
+++ b/Encrypter/templates/viewimagepasswordpage.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>View Image</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/static/javascript/templatejavascript.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -14,6 +17,27 @@
             }, 5000);
         });
     </script>
+
+    <style>
+        #imgpassword {
+            padding-left: 15px;
+            letter-spacing: 42px;
+            border: 0;
+            background-image: linear-gradient(to left, black 70%, rgba(255, 255, 255, 0) 0%);
+            background-position: bottom;
+            background-size: 50px 1px;
+            background-repeat: repeat-x;
+            background-position-x: 35px;
+            width: 200px;
+            outline: none;
+            align-content: center;
+        }
+
+        body {
+            color: #ff0000;
+        }
+    </style>
+    <link rel="stylesheet" href="static/css/imgpasswordpage.css" />
 </head>
 <body>
 
@@ -30,13 +54,18 @@
     </div>
     {% endblock %}
     <form action="/viewimage" method="post">
-        <label id="imageidtext">Enter Your 4-Digit Pin for Image</label><br />
-        <input type="text" name="image_id" value="{{image_id}}" readonly /><br /><br />
+        <div>
+            <label id="imageidtext">Image Id</label><br />
+            <input type="text" name="image_id" value="{{image_id}}" readonly /><br /><br />
 
-        <input type="number" name="image_pass" maxlength="4" /><br /><br />
+            <label id="imageidtext">Enter Your 4-Digit Pin for Image</label><br />
+            <input type="number" name="image_pass" id="imgpassword" maxlength="4" /><br /><br />
 
-        <input type="submit" value="View" />
-    </form>
+            <input type="submit" class="btn btn-success" value="View" />
+        </div>
+    </form><br /><br />
+
+    <a href="/dashboardpage" class="btn btn-primary">Return to Dashboard</a>
 
 </body>
 </html>
