--- a/Encrypter/static/css/signuppage.css
+++ b/Encrypter/static/css/signuppage.css
@@ -34,10 +34,12 @@
 
 #signup {
     text-align:center;
-    margin-top:10px;
+    margin-top:25px;
     margin-bottom:20px;
+    font-size:30px;
 }
 
 #submitbutton {
+    width:200px;
     
 }
