--- a/Encrypter/templates/accountsettings.html
+++ b/Encrypter/templates/accountsettings.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Account Settings</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/static/javascript/templatejavascript.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -14,6 +17,8 @@
             }, 5000);
         });
     </script>
+
+    <link rel="stylesheet" href="static/css/accountcontrolspage.css" />
 </head>
 <body>
 
@@ -29,13 +34,12 @@
         {% block page_content %}{% endblock %}
     </div>
     {% endblock %}
-    <form action="/changepasswordpage">
-        <br /><br />
-        <input type="submit" value="Change Account Password" /><br /><br />
-    </form>
-    <form action="/deleteaccount">
-        <br /><br />
-        <input type="submit" value="Delete Account" /><br /><br />
-    </form>
+    
+    <h1>Account Settings</h1>
+    <div id="account_controls">
+        <a href="/changepasswordpage" id="change_password" class="btn btn-success">Change Password</a>
+        <a href="/deleteaccount" id="delete_account" class="btn btn-danger">Delete Account</a>
+    </div>
+
 </body>
 </html>
