--- a/Encrypter/templates/changepassword.html
+++ b/Encrypter/templates/changepassword.html
@@ -39,7 +39,7 @@
         <label id="newpass2">Re-Enter New Password</label><br />
         <input type="password" id="newpass2" name="newpassword2" placeholder="Re-Enter New Password" /><br /><br />
 
-        <input type="submit" value="Submit" />
+        <input class="btn btn-primary" type="submit" value="Submit" />
     </form>
 </body>
 </html>
