--- a/Encrypter/templates/imageupload.html
+++ b/Encrypter/templates/imageupload.html
@@ -17,6 +17,8 @@
             }, 5000);
         });
     </script>
+
+    <link rel="stylesheet" href="static/css/imageuploadpage.css" />
 </head>
 <body>
     {% block content %}
@@ -33,19 +35,21 @@
     {% endblock %}
     <h3>Upload Image</h3>
     <form action="/imageupload" method="post" enctype="multipart/form-data">
-        <label id="image_upload">Upload an Image</label><br /><br />
-        <input type="file" name="uploaded_image" /><br /><br />
+        <div>
+            <label id="image_upload">Upload an Image</label><br /><br />
+            <input type="file" name="uploaded_image" /><br /><br />
 
-        <input type="checkbox" id="myCheck" name="check" value="default" checked onclick="addbox();" />
-        <label id="default_pin">Use Default 4-Digit Pin?</label><br /><br />
+            <input type="checkbox" id="myCheck" name="check" value="default" checked onclick="addbox();" />
+            <label id="default_pin">Use Default 4-Digit Pin?</label><br /><br />
 
-        <label id="textlabel" hidden>Enter 4-Digit Encryption Key</label>
-        <input type="text" id="text_box" name="encryption_key" hidden /><br /><br />
+            <label id="textlabel" hidden>Enter 4-Digit Encryption Key</label>
+            <input type="text" id="text_box" name="encryption_key" hidden /><br /><br />
 
-        <label id="img_name">Enter Image Name</label><br />
-        <input type="text" id="img_text" name="image_name" /><br /><br />
+            <label id="img_name">Enter Image Name</label><br />
+            <input type="text" id="img_text" name="image_name" /><br /><br />
 
-        <input type="submit" value="Upload" />
+            <input class="btn btn-primary" type="submit" value="Upload" />
+        </div>
 
     </form>
     <script>
