--- a/Encrypter/templates/login.html
+++ b/Encrypter/templates/login.html
@@ -38,11 +38,11 @@
     <form action="/login" method="post">
         <div id="loginform">
             <div id="inputs" >
-                <label class="lb-lg" for="email" id="emailid">Enter Email</label><br />
-                <input type="text" class="form-control input-lg" id="email" name="email_id" placeholder="Enter Email" required /><br />
+                <label for="email" id="emailid">Enter Email</label><br />
+                <input type="text" class="form-control" id="email" name="email_id" placeholder="Enter Email" required /><br />
 
-                <label class="lb-lg" for="password" id="pass">Enter Password</label><br />
-                <input type="password" class="form-control input-lg" id="password" name="password" placeholder="Enter Password" required/><br /><br />
+                <label for="password" id="pass">Enter Password</label><br />
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required/><br /><br />
             </div>
 
             <div id="loginbutton" style="text-align:center;">
