--- a/Encrypter/static/css/dashboardpage.css
+++ b/Encrypter/static/css/dashboardpage.css
@@ -2,6 +2,10 @@ body {
     background-image: src('images/dashboard_background.jpg');
 }
 
+* {
+    box-sizing: border-box;
+}
+
 h4{
     color:#000000;
     font-size: 40px;
@@ -47,10 +51,13 @@ td {
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left:10px;
-    padding-right:10px;
+    padding-left: 10px;
+    padding-right: 10px;
     width: 250px;
     margin: auto;
+    padding-left: 25px;
+    background: url("../images/search-solid.svg") no-repeat left;
+    background-size: 20px;
 }
 
 #downloadimage, #viewimage, #deleteimage {
@@ -65,4 +72,53 @@ td {
 
 #account_settings, #image_upload, #logout {
     width: 200px;
+}
+
+
+.header {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 20px 10px;
+}
+
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
+
+        .header a.logo {
+            font-size: 40px;
+        }
+
+        .header a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .header a.active {
+            background-color: dodgerblue;
+            color: white;
+        }
+
+.header-right {
+    float: right;
+}
+
+@media screen and (max-width: 1500px) {
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+
+    .header-right {
+        float: none;
+        display:flex;
+    }
 }
