--- a/Encrypter/templates/welcome.html
+++ b/Encrypter/templates/welcome.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h2>Welcome to Encrypter</h2><br /><br />
+    <p>The most secure image encryption and backup system</p>
     
     <h4>Select an option to continue</h4><br /><br />
     <a href="/loginpage">Login</a><br /><br />
