--- a/Encrypter/static/css/dashboardpage.css
+++ b/Encrypter/static/css/dashboardpage.css
@@ -1,7 +1,3 @@
-body {
-    background-image: src('images/dashboard_background.jpg');
-}
-
 * {
     box-sizing: border-box;
 }
@@ -27,14 +23,22 @@ th{
     padding-left:70px;
     padding-right:70px;
     padding-bottom:20px;
-    padding-top:20px;
+    padding-top:10px;
     font-size:20px;
+    padding-right:70px;
+    border: 1px solid;
 }
 
 td {
     text-align:center;
     font-size:15px;
     padding-bottom: 20px;
+    border: 1px solid;
+    padding: 8px;
+}
+
+#rows:hover {
+    background-color:#8080807f;
 }
 
 #header {
@@ -58,6 +62,7 @@ td {
     padding-left: 25px;
     background: url("../images/search-solid.svg") no-repeat left;
     background-size: 20px;
+    border: 2px solid;
 }
 
 #downloadimage, #viewimage, #deleteimage {
