--- a/Encrypter/static/css/signuppage.css
+++ b/Encrypter/static/css/signuppage.css
@@ -1,35 +1,20 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: white;
 }
 
 #form1 {
     width: fit-content;
     height: fit-content;
-    background-color: white;
+    background-color: #80808034;
     position: center;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    padding: 2px;
-    margin-top:50px;
-    margin-right:50px;
-}
-#imgpassword {
-    padding-left: 15px;
-    letter-spacing: 42px;
-    border: 0;
-    background-image: linear-gradient(to left, black 70%, rgba(255, 255, 255, 0) 0%);
-    background-position: bottom;
-    background-size: 50px 1px;
-    background-repeat: repeat-x;
-    background-position-x: 35px;
-    width: 200px;
-    outline: none;
-    align-content:center;
+    padding: 20px;
+    margin-top:10px;
 }
 
 #signup {
@@ -41,5 +26,38 @@
 
 #submitbutton {
     width:200px;
-    
+}
+
+ #email, #password, #imgpassword{
+    width:250px;
+    height:40px;
+}
+
+#firstname, #lastname {
+    width: 120px;
+    height:40px;
+}
+
+#first_name, #last_name { 
+    padding-right:10px;
+}
+
+
+#text_box {
+    display: flex;
+}
+
+label {
+    font-size: 15px;
+}
+
+#otp [type="text"] {
+    display:inline;
+    width:40px;
+    height:40px;
+    padding-left:5px;
+}
+
+#otp { 
+    margin-left:35px;
 }
