--- a/Encrypter/templates/changepassword.html
+++ b/Encrypter/templates/changepassword.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <title>Change Password</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/static/javascript/templatejavascript.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -14,8 +17,40 @@
             }, 5000);
         });
     </script>
+    <style>
+        #oldpassword, #newpass1, #newpass2 {
+            width: 250px;
+            height: 40px;
+        }
+
+        #pass_form {
+            width: fit-content;
+            height:fit-content;
+            padding:20px;
+            margin-top: 20px;
+            margin-left: 41%;
+        }
+
+        input {
+            width:200px;
+        }
+
+        label {
+            font-size:15px;
+        }
+    </style>
+    <link rel="stylesheet" href="static/css/dashboardpage.css" />
 </head>
 <body>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a id="dashboard" href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
 
     {% block content %}
     <div class="container">
@@ -30,16 +65,26 @@
     </div>
     {% endblock %}
     <form action="/changepassword" method="post">
-        <label id="oldpass">Enter Existing Password</label><br />
-        <input type="password" id="oldpassword" name="oldpassword" placeholder="Existing Password" /><br /><br />
+        <div id="pass_form">
+            <div>
+                <label id="oldpass">Enter Existing Password</label>
+                <input type="password" class="form-control" id="oldpassword" name="oldpassword" placeholder="Enter Existing Password" /><br />
+            </div>
 
-        <label id="newpass1">Enter New Password</label><br />
-        <input type="password" id="newpass1" name="newpassword1" placeholder="New Password" /><br /><br />
+            <div>
+                <label id="newpass1">Enter New Password</label>
+                <input type="password" class="form-control" id="newpass1" name="newpassword1" placeholder="Enter New Password" /><br />
+            </div>
 
-        <label id="newpass2">Re-Enter New Password</label><br />
-        <input type="password" id="newpass2" name="newpassword2" placeholder="Re-Enter New Password" /><br /><br />
+            <div>
+                <label id="newpass2">Re-Enter New Password</label>
+                <input type="password" class="form-control" id="newpass2" name="newpassword2" placeholder="Re-Enter New Password" /><br /><br />
+            </div>
 
-        <input class="btn btn-primary" type="submit" value="Submit" />
+            <div style="text-align:center;">
+                <input class="btn btn-success" type="submit" value="Submit" />
+            </div>
+        </div>
     </form>
 </body>
 </html>
