--- a/Encrypter/templates/imagepasswordpage.html
+++ b/Encrypter/templates/imagepasswordpage.html
@@ -16,28 +16,49 @@
                 });
             }, 5000);
         });
+
+        document.addEventListener("DOMContentLoaded", function (event) {
+
+            function OTPInput() {
+                const inputs = document.querySelectorAll('#otp > *[id]');
+                for (let i = 0; i < inputs.length; i++) { inputs[i].addEventListener('keydown', function (event) { if (event.key === "Backspace") { inputs[i].value = ''; if (i !== 0) inputs[i - 1].focus(); } else { if (i === inputs.length - 1 && inputs[i].value !== '') { return true; } else if (event.keyCode > 47 && event.keyCode < 58) { inputs[i].value = event.key; if (i !== inputs.length - 1) inputs[i + 1].focus(); event.preventDefault(); } else if (event.keyCode > 64 && event.keyCode < 91) { inputs[i].value = String.fromCharCode(event.keyCode); if (i !== inputs.length - 1) inputs[i + 1].focus(); event.preventDefault(); } } }); }
+            } OTPInput();
+        });
     </script>
 
     <style>
-        #imgpassword {
-            padding-left: 15px;
-            letter-spacing: 42px;
-            border: 0;
-            background-image: linear-gradient(to left, black 70%, rgba(255, 255, 255, 0) 0%);
-            background-position: bottom;
-            background-size: 50px 1px;
-            background-repeat: repeat-x;
-            background-position-x: 35px;
-            width: 200px;
-            outline: none;
-            align-content: center;
+        #form {
+            width: fit-content;
+            height: fit-content;
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
+            padding: 20px;
         }
 
-        body {
-         
+        #otp [type="text"] {
+            display: inline;
+            width: 40px;
+            height: 40px;
+            padding-left: 5px;
+        }
+
+        #otp {
+            margin-left: 35px;
+            padding-bottom: 25px;
+        }
+
+        #dashboardpage, #submit {
+            width: 250px;
+        }
+
+        label {
+            font-size: 15px;
         }
     </style>
-    <link rel="stylesheet" href="static/css/imgpasswordpage.css" />
 </head>
 <body>
     {% block content %}
@@ -53,18 +74,26 @@
     </div>
     {% endblock %}
     <form action="/downloadimage" method="post">
-        <div style="position:center;">
+        <div id="form">
             <label id="imageidtext">Image Id</label><br />
-            <input type="text" name="image_id" value="{{image_id}}" readonly /><br /><br />
+            <input class="form-control" type="text" name="image_id" value="{{image_id}}" readonly /><br /><br />
 
-            <label id="imageidtext">Enter Your 4-Digit Pin for Image</label><br />
-            <input type="number" name="image_pass" id="imgpassword" maxlength="4" /><br /><br />
+            <div id="image_box">
+                <label id="imageidtext">Enter Your 4-Digit Pin for Image</label><br />
+                <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2">
+                    <input class="m-2 text-center form-control rounded" type="text" id="input1" name="input1" v-on:keyup="inputenter(1)" maxlength="1" />
+                    <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(2)" type="text" id="input2" name="input2" maxlength="1" />
+                    <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(3)" type="text" id="input3" name="input3" maxlength="1" />
+                    <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4" name="input4" maxlength="1" />
+                </div>
+            </div>
 
-            <input type="submit" class="btn btn-success" value="View" />
+            <input id="submit" type="submit" class="btn btn-success" value="View" /><br /><br />
+
+            <a id="dashboardpage" href="/dashboardpage" class="btn btn-primary">Return to Dashboard</a>
         </div>
     </form><br /><br />
 
-    <a href="/dashboardpage" class="btn btn-primary">Return to Dashboard</a>
 
 </body>
 </html>
