--- a/Encrypter/templates/imageupload.html
+++ b/Encrypter/templates/imageupload.html
@@ -16,11 +16,33 @@
                 });
             }, 5000);
         });
+
+        document.addEventListener("DOMContentLoaded", function (event) {
+
+            function OTPInput() {
+                const inputs = document.querySelectorAll('#otp > *[id]');
+                for (let i = 0; i < inputs.length; i++) { inputs[i].addEventListener('keydown', function (event) { if (event.key === "Backspace") { inputs[i].value = ''; if (i !== 0) inputs[i - 1].focus(); } else { if (i === inputs.length - 1 && inputs[i].value !== '') { return true; } else if (event.keyCode > 47 && event.keyCode < 58) { inputs[i].value = event.key; if (i !== inputs.length - 1) inputs[i + 1].focus(); event.preventDefault(); } else if (event.keyCode > 64 && event.keyCode < 91) { inputs[i].value = String.fromCharCode(event.keyCode); if (i !== inputs.length - 1) inputs[i + 1].focus(); event.preventDefault(); } } }); }
+            } OTPInput();
+        });
     </script>
 
+    <style>
+    </style>
+
     <link rel="stylesheet" href="static/css/imageuploadpage.css" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/dashboardpage.css') }}" />
 </head>
 <body>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
+
     {% block content %}
     <div class="container">
         {% for message in get_flashed_messages() %}
@@ -33,33 +55,41 @@
         {% block page_content %}{% endblock %}
     </div>
     {% endblock %}
-    <h3>Upload Image</h3>
+    <h1 style="text-align:center;">Upload Image</h1>
     <form action="/imageupload" method="post" enctype="multipart/form-data">
-        <div>
-            <label id="image_upload">Upload an Image</label><br /><br />
-            <input type="file" name="uploaded_image" /><br /><br />
+        <div id="upload_form">
+            <label id="image_upload">Select an Image</label><br /><br />
+            <input style="text-align:center;" type="file" class="form-control-file" id="imageupload" name="uploaded_image" /><br /><br />
 
             <input type="checkbox" id="myCheck" name="check" value="default" checked onclick="addbox();" />
-            <label id="default_pin">Use Default 4-Digit Pin?</label><br /><br />
+            <label class="form-check-input" id="default_pin">Use Default 4-Digit Pin?</label><br /><br />
 
             <label id="textlabel" hidden>Enter 4-Digit Encryption Key</label>
-            <input type="text" id="text_box" name="encryption_key" hidden /><br /><br />
+            <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2 panel-collapse collapse">
+                <input class="m-2 text-center form-control rounded" type="text" id="input1" name="input1" v-on:keyup="inputenter(1)" maxlength="1" />
+                <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(2)" type="text" id="input2" name="input2" maxlength="1" />
+                <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(3)" type="text" id="input3" name="input3" maxlength="1" />
+                <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4" name="input4" maxlength="1" />
+            </div>
+            <!--<input class="form-control panel-collapse collapse" type="number" id="text_box" name="encryption_key" maxlength="4" placeholder="Enter Image Encryption Key" hidden /><br /><br />-->
 
             <label id="img_name">Enter Image Name</label><br />
-            <input type="text" id="img_text" name="image_name" /><br /><br />
+            <input class="form-control" type="text" id="img_text" name="image_name" placeholder="Enter Image Name" /><br /><br />
 
-            <input class="btn btn-primary" type="submit" value="Upload" />
+            <div id="submit_button" style="text-align:center;">
+                <input id="submit" class="btn btn-primary" type="submit" value="Upload" />
+            </div>
         </div>
 
     </form>
     <script>
         function addbox() {
             if (document.getElementById('myCheck').checked) {
-                document.getElementById('text_box').style.display = 'none';
+                document.getElementById('otp').style.display = 'none';
                 document.getElementById('textlabel').style.display = 'none';
             }
             else {
-                document.getElementById('text_box').style.display = 'block';
+                document.getElementById('otp').style.display = 'block';
                 document.getElementById('textlabel').style.display = 'block';
             }
         }
