--- a/Encrypter/templates/login.html
+++ b/Encrypter/templates/login.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -18,8 +18,19 @@
         });
     </script>
     <link rel="stylesheet" href="static/css/loginpage.css" />
+    <link rel="stylesheet" href="static/css/dashboardpage.css" />
 </head>
 <body>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a id="dashboard" href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
+
     <h1 style="text-align:center;">Login</h1><br />
 
     {% block content %}
@@ -37,12 +48,12 @@
 
     <form action="/login" method="post">
         <div id="loginform">
-            <div id="inputs" >
+            <div id="inputs">
                 <label for="email" id="emailid">Enter Email</label><br />
                 <input type="text" class="form-control" id="email" name="email_id" placeholder="Enter Email" required /><br />
 
                 <label for="password" id="pass">Enter Password</label><br />
-                <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required/><br /><br />
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required /><br /><br />
             </div>
 
             <div id="loginbutton" style="text-align:center;">
