--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -15,12 +15,31 @@
                 });
             }, 5000);
         });
+
+        document.addEventListener("DOMContentLoaded", function (event) {
+
+            function OTPInput() {
+                const inputs = document.querySelectorAll('#otp > *[id]');
+                for (let i = 0; i < inputs.length; i++) { inputs[i].addEventListener('keydown', function (event) { if (event.key === "Backspace") { inputs[i].value = ''; if (i !== 0) inputs[i - 1].focus(); } else { if (i === inputs.length - 1 && inputs[i].value !== '') { return true; } else if (event.keyCode > 47 && event.keyCode < 58) { inputs[i].value = event.key; if (i !== inputs.length - 1) inputs[i + 1].focus(); event.preventDefault(); } else if (event.keyCode > 64 && event.keyCode < 91) { inputs[i].value = String.fromCharCode(event.keyCode); if (i !== inputs.length - 1) inputs[i + 1].focus(); event.preventDefault(); } } }); }
+            } OTPInput();
+        });
     </script>
     <script src="/static/javascript/templatejavascript.js"></script>
     <link rel="stylesheet" href="static/css/signuppage.css" />
+    <link rel="stylesheet" href="static/css/dashboardpage.css" />
 </head>
 <body>
-    <h3 id="signup">SIGN UP</h3>
+    <div class="header">
+        <a href="#" class="logo">Encrypter</a>
+        <div class="header-right">
+            <a id="dashboard" href="/dashboardpage" style="padding-left:20px; padding-right:20px;">Dashboard</a>
+            <a id="about_text" href="/static/html/about.html" style="padding-left:20px; padding-right:20px;">About</a>
+            <a id="tutorial" href="/static/html/tutorial.html" style="padding-left:20px; padding-right:20px;">How to Use</a>
+            <a id="contact" href="/static/html/contact.html" style="padding-left:20px; padding-right:20px;">Contact</a>
+        </div>
+    </div>
+    
+    <h3 id="signup">Sign Up</h3>
 
     {% block content %}
     <div class="container">
@@ -37,38 +56,44 @@
 
     <div id="form1">
         <form action="/signup" method="post" text-align="center">
-            <div class="form-row">
-                <div class="form-group col-md-4">
+            <div id="text_box">
+                <div id="first_name">
                     <label for="firstname" id="fname">Enter First Name</label><br />
-                    <input type="text" id="firstname" class="form-control" placeholder="First Name" name="first_name" required />
+                    <input type="text" class="form-control" id="firstname" placeholder="First Name" name="first_name" required /><br />
                 </div>
 
-                <div class="form-group col-md-4">
+                <div id="last_name">
                     <label for="lastname" id="lname">Enter Last Name</label><br />
-                    <input type="text" id="lastname" class="form-control" placeholder="Last Name" name="last_name" required />
+                    <input type="text" class="form-control" id="lastname" placeholder="Last Name" name="last_name" required /><br />
                 </div>
             </div>
 
-            <div class="form-group col-md-8">
+            <div>
                 <label for="email" id="emailid">Enter Email</label><br />
-                <input type="text" id="email" class="form-control" placeholder="Email" name="email_id" required />
+                <input type="text" class="form-control" id="email" placeholder="Enter Email" name="email_id" required /><br />
             </div>
 
-            <div class="form-group col-md-8">
+            <div>
                 <label for="password" id="pass">Enter Password</label><br />
-                <input type="password" id="password" class="form-control" placeholder="Password" name="password" required />
+                <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password" required /><br />
             </div>
 
-            <div class="form-group col-md-8">
+            <div>
                 <label for="imgpassword" id="imgpass">Enter 4 Digit Image Password</label><br />
-                <input type="text" id="imgpassword" class="form-control" name="img_pass" maxlength="4" required /><br />
+                <div id="otp" class="inputs d-flex flex-row justify-content-center mt-2"> 
+                    <input class="m-2 text-center form-control rounded" type="text" id="input1" name="input1" v-on:keyup="inputenter(1)" maxlength="1" /> 
+                    <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(2)" type="text" id="input2" name="input2" maxlength="1" /> 
+                    <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(3)" type="text" id="input3" name="input3" maxlength="1" /> 
+                    <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4" name="input4" maxlength="1" /> 
+                </div>
+                <!--<input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*?)\..*/g, '$1');" class="form-control" id="imgpassword" name="img_pass" maxlength="4" required /><br />-->
             </div>
 
-            <div class="form-group col-md-8" style="text-align:center">
+            <div style="text-align:center; padding-top:20px;">
                 <input id="submitbutton" class="text-center btn btn-primary" type="submit" value="SUBMIT" /> <br /><br />
             </div>
 
-            <div class="form-group col-md-8" style="text-align:center;">
+            <div style="text-align:center;">
                 <a href="/loginpage">Login Instead</a>
             </div>
         </form>
