--- a/Encrypter/static/css/signuppage.css
+++ b/Encrypter/static/css/signuppage.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body {
+    background-image: url('../images/marvin-meyer-SYTO3xs06fU-unsplash.jpg');
+}
+
 #form1 {
     width: fit-content;
     height: fit-content;
@@ -14,7 +18,13 @@
     right: 0;
     margin: auto;
     padding: 20px;
-    margin-top:10px;
+    margin-top: 10px;
+    background: rgba( 255, 255, 255, 0.8 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 20px );
+    -webkit-backdrop-filter: blur( 20px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 #signup {
