--- a/Encrypter/templates/imagepasswordpage.html
+++ b/Encrypter/templates/imagepasswordpage.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <input id="submit" type="submit" class="btn btn-success" value="View" /><br /><br />
+            <input id="submit" type="submit" class="btn btn-success" value="Download" /><br /><br />
 
             <a id="dashboardpage" href="/dashboardpage" class="btn btn-primary">Return to Dashboard</a>
         </div>
