--- a/Encrypter/templates/login.html
+++ b/Encrypter/templates/login.html
@@ -57,7 +57,7 @@
             </div>
 
             <div id="loginbutton" style="text-align:center;">
-                <input class="text-center btn btn-primary" type="submit" value="SUBMIT" /><br /><br />
+                <input class="text-center btn btn-primary" type="submit" value="Login" /><br /><br />
             </div>
 
             <div style="text-align:center;">
