--- a/Encrypter/templates/signup.html
+++ b/Encrypter/templates/signup.html
@@ -86,11 +86,10 @@
                     <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(3)" type="text" id="input3" name="input3" maxlength="1" /> 
                     <input class="m-2 text-center form-control rounded" v-on:keyup="inputenter(4)" type="text" id="input4" name="input4" maxlength="1" /> 
                 </div>
-                <!--<input type="text" oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\..*?)\..*/g, '$1');" class="form-control" id="imgpassword" name="img_pass" maxlength="4" required /><br />-->
             </div>
 
             <div style="text-align:center; padding-top:20px;">
-                <input id="submitbutton" class="text-center btn btn-primary" type="submit" value="SUBMIT" /> <br /><br />
+                <input id="submitbutton" class="text-center btn btn-primary" type="submit" value="Submit" /> <br /><br />
             </div>
 
             <div style="text-align:center;">
